lang/langParser.py
# Generated from lang.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class langParser(Parser):
    grammarFileName = "lang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "';'",
        "'='",
        "'@'",
        "'->'",
        "'print'",
        "'{'",
        "','",
        "'}'",
        "'('",
        "')'",
        "':'",
        "'set'",
        "'as'",
        "'starts'",
        "'of'",
        "'^~'",
        "'finals'",
        "'~^'",
        "'add'",
        "'to'",
        "'+~'",
        "'~+'",
        "'.starts'",
        "'.finals'",
        "'reachable'",
        "'in'",
        "'*~*'",
        "'.vertices'",
        "'.edges'",
        "'.labels'",
        "'map'",
        "'with'",
        "'@m>'",
        "'filter'",
        "'@f>'",
        "'load'",
        "'&'",
        "'+'",
        "'|'",
        "'*'",
        "'smb'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "WS",
        "NAME",
        "INT",
        "STRING",
        "COMMENT",
    ]

    RULE_prog = 0
    RULE_stmt = 1
    RULE_bind = 2
    RULE_lambda = 3
    RULE_print = 4
    RULE_var = 5
    RULE_val = 6
    RULE_expr = 7

    ruleNames = ["prog", "stmt", "bind", "lambda", "print", "var", "val", "expr"]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    T__20 = 21
    T__21 = 22
    T__22 = 23
    T__23 = 24
    T__24 = 25
    T__25 = 26
    T__26 = 27
    T__27 = 28
    T__28 = 29
    T__29 = 30
    T__30 = 31
    T__31 = 32
    T__32 = 33
    T__33 = 34
    T__34 = 35
    T__35 = 36
    T__36 = 37
    T__37 = 38
    T__38 = 39
    T__39 = 40
    T__40 = 41
    WS = 42
    NAME = 43
    INT = 44
    STRING = 45
    COMMENT = 46

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ProgContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(langParser.EOF, 0)

        def stmt(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(langParser.StmtContext)
            else:
                return self.getTypedRuleContext(langParser.StmtContext, i)

        def getRuleIndex(self):
            return langParser.RULE_prog

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProg"):
                listener.enterProg(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProg"):
                listener.exitProg(self)

    def prog(self):
        localctx = langParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 5 or _la == 43:
                self.state = 16
                self.stmt()
                self.state = 17
                self.match(langParser.T__0)
                self.state = 23
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 24
            self.match(langParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bind(self):
            return self.getTypedRuleContext(langParser.BindContext, 0)

        def print_(self):
            return self.getTypedRuleContext(langParser.PrintContext, 0)

        def getRuleIndex(self):
            return langParser.RULE_stmt

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStmt"):
                listener.enterStmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStmt"):
                listener.exitStmt(self)

    def stmt(self):
        localctx = langParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 28
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [43]:
                self.enterOuterAlt(localctx, 1)
                self.state = 26
                self.bind()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 27
                self.print_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BindContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(langParser.VarContext, 0)

        def expr(self):
            return self.getTypedRuleContext(langParser.ExprContext, 0)

        def lambda_(self):
            return self.getTypedRuleContext(langParser.LambdaContext, 0)

        def getRuleIndex(self):
            return langParser.RULE_bind

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBind"):
                listener.enterBind(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBind"):
                listener.exitBind(self)

    def bind(self):
        localctx = langParser.BindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_bind)
        try:
            self.state = 38
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 2, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 30
                self.var()
                self.state = 31
                self.match(langParser.T__1)
                self.state = 32
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 34
                self.var()
                self.state = 35
                self.match(langParser.T__1)
                self.state = 36
                self.lambda_()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LambdaContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(langParser.VarContext, 0)

        def expr(self):
            return self.getTypedRuleContext(langParser.ExprContext, 0)

        def getRuleIndex(self):
            return langParser.RULE_lambda

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLambda"):
                listener.enterLambda(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLambda"):
                listener.exitLambda(self)

    def lambda_(self):
        localctx = langParser.LambdaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_lambda)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(langParser.T__2)
            self.state = 41
            self.var()
            self.state = 42
            self.match(langParser.T__3)
            self.state = 43
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrintContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(langParser.ExprContext, 0)

        def getRuleIndex(self):
            return langParser.RULE_print

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPrint"):
                listener.enterPrint(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPrint"):
                listener.exitPrint(self)

    def print_(self):
        localctx = langParser.PrintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_print)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(langParser.T__4)
            self.state = 46
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(langParser.NAME, 0)

        def getRuleIndex(self):
            return langParser.RULE_var

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVar"):
                listener.enterVar(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVar"):
                listener.exitVar(self)

    def var(self):
        localctx = langParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(langParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i: int = None):
            if i is None:
                return self.getTokens(langParser.INT)
            else:
                return self.getToken(langParser.INT, i)

        def STRING(self):
            return self.getToken(langParser.STRING, 0)

        def expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(langParser.ExprContext)
            else:
                return self.getTypedRuleContext(langParser.ExprContext, i)

        def getRuleIndex(self):
            return langParser.RULE_val

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVal"):
                listener.enterVal(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVal"):
                listener.exitVal(self)

    def val(self):
        localctx = langParser.ValContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_val)
        self._la = 0  # Token type
        try:
            self.state = 74
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 4, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.match(langParser.INT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.match(langParser.STRING)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 52
                self.match(langParser.T__5)
                self.state = 53
                self.expr(0)
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == 7:
                    self.state = 54
                    self.match(langParser.T__6)
                    self.state = 55
                    self.expr(0)
                    self.state = 60
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 61
                self.match(langParser.T__7)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 63
                self.match(langParser.T__8)
                self.state = 64
                self.expr(0)
                self.state = 65
                self.match(langParser.T__6)
                self.state = 66
                self.expr(0)
                self.state = 67
                self.match(langParser.T__9)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 69
                self.match(langParser.T__5)
                self.state = 70
                self.match(langParser.INT)
                self.state = 71
                self.match(langParser.T__10)
                self.state = 72
                self.match(langParser.INT)
                self.state = 73
                self.match(langParser.T__7)
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(langParser.ExprContext)
            else:
                return self.getTypedRuleContext(langParser.ExprContext, i)

        def var(self):
            return self.getTypedRuleContext(langParser.VarContext, 0)

        def val(self):
            return self.getTypedRuleContext(langParser.ValContext, 0)

        def lambda_(self):
            return self.getTypedRuleContext(langParser.LambdaContext, 0)

        def STRING(self):
            return self.getToken(langParser.STRING, 0)

        def getRuleIndex(self):
            return langParser.RULE_expr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterExpr"):
                listener.enterExpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitExpr"):
                listener.exitExpr(self)

    def expr(self, _p: int = 0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = langParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 5, self._ctx)
            if la_ == 1:
                self.state = 77
                self.match(langParser.T__8)
                self.state = 78
                self.expr(0)
                self.state = 79
                self.match(langParser.T__9)
                pass

            elif la_ == 2:
                self.state = 81
                self.var()
                pass

            elif la_ == 3:
                self.state = 82
                self.val()
                pass

            elif la_ == 4:
                self.state = 83
                self.match(langParser.T__11)
                self.state = 84
                self.expr(0)
                self.state = 85
                self.match(langParser.T__12)
                self.state = 86
                self.match(langParser.T__13)
                self.state = 87
                self.match(langParser.T__14)
                self.state = 88
                self.expr(26)
                pass

            elif la_ == 5:
                self.state = 90
                self.match(langParser.T__11)
                self.state = 91
                self.expr(0)
                self.state = 92
                self.match(langParser.T__12)
                self.state = 93
                self.match(langParser.T__16)
                self.state = 94
                self.match(langParser.T__14)
                self.state = 95
                self.expr(24)
                pass

            elif la_ == 6:
                self.state = 97
                self.match(langParser.T__18)
                self.state = 98
                self.expr(0)
                self.state = 99
                self.match(langParser.T__19)
                self.state = 100
                self.expr(0)
                self.state = 101
                self.match(langParser.T__13)
                pass

            elif la_ == 7:
                self.state = 103
                self.match(langParser.T__18)
                self.state = 104
                self.expr(0)
                self.state = 105
                self.match(langParser.T__19)
                self.state = 106
                self.expr(0)
                self.state = 107
                self.match(langParser.T__16)
                pass

            elif la_ == 8:
                self.state = 109
                self.match(langParser.T__24)
                self.state = 110
                self.match(langParser.T__25)
                self.state = 111
                self.expr(16)
                pass

            elif la_ == 9:
                self.state = 112
                self.match(langParser.T__26)
                self.state = 113
                self.expr(15)
                pass

            elif la_ == 10:
                self.state = 114
                self.match(langParser.T__30)
                self.state = 115
                self.expr(0)
                self.state = 116
                self.match(langParser.T__31)
                self.state = 117
                self.lambda_()
                pass

            elif la_ == 11:
                self.state = 119
                self.lambda_()
                self.state = 120
                self.match(langParser.T__32)
                self.state = 121
                self.expr(10)
                pass

            elif la_ == 12:
                self.state = 123
                self.match(langParser.T__33)
                self.state = 124
                self.expr(0)
                self.state = 125
                self.match(langParser.T__31)
                self.state = 126
                self.lambda_()
                pass

            elif la_ == 13:
                self.state = 128
                self.match(langParser.T__35)
                self.state = 129
                self.match(langParser.STRING)
                pass

            self._ctx.stop = self._input.LT(-1)
            self.state = 176
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 7, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 174
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input, 6, self._ctx)
                    if la_ == 1:
                        localctx = langParser.ExprContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expr
                        )
                        self.state = 132
                        if not self.precpred(self._ctx, 25):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 25)"
                            )
                        self.state = 133
                        self.match(langParser.T__15)
                        self.state = 134
                        self.expr(26)
                        pass

                    elif la_ == 2:
                        localctx = langParser.ExprContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expr
                        )
                        self.state = 135
                        if not self.precpred(self._ctx, 23):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 23)"
                            )
                        self.state = 136
                        self.match(langParser.T__17)
                        self.state = 137
                        self.expr(24)
                        pass

                    elif la_ == 3:
                        localctx = langParser.ExprContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expr
                        )
                        self.state = 138
                        if not self.precpred(self._ctx, 21):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 21)"
                            )
                        self.state = 139
                        self.match(langParser.T__20)
                        self.state = 140
                        self.expr(22)
                        pass

                    elif la_ == 4:
                        localctx = langParser.ExprContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expr
                        )
                        self.state = 141
                        if not self.precpred(self._ctx, 19):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 19)"
                            )
                        self.state = 142
                        self.match(langParser.T__21)
                        self.state = 143
                        self.expr(20)
                        pass

                    elif la_ == 5:
                        localctx = langParser.ExprContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expr
                        )
                        self.state = 144
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 6)"
                            )
                        self.state = 145
                        self.match(langParser.T__36)
                        self.state = 146
                        self.expr(7)
                        pass

                    elif la_ == 6:
                        localctx = langParser.ExprContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expr
                        )
                        self.state = 147
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 5)"
                            )
                        self.state = 148
                        self.match(langParser.T__37)
                        self.state = 149
                        self.expr(6)
                        pass

                    elif la_ == 7:
                        localctx = langParser.ExprContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expr
                        )
                        self.state = 150
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 4)"
                            )
                        self.state = 151
                        self.match(langParser.T__38)
                        self.state = 152
                        self.expr(5)
                        pass

                    elif la_ == 8:
                        localctx = langParser.ExprContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expr
                        )
                        self.state = 153
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 2)"
                            )
                        self.state = 154
                        self.match(langParser.T__40)
                        self.state = 155
                        self.expr(3)
                        pass

                    elif la_ == 9:
                        localctx = langParser.ExprContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expr
                        )
                        self.state = 156
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 1)"
                            )
                        self.state = 157
                        self.match(langParser.T__25)
                        self.state = 158
                        self.expr(2)
                        pass

                    elif la_ == 10:
                        localctx = langParser.ExprContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expr
                        )
                        self.state = 159
                        if not self.precpred(self._ctx, 18):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 18)"
                            )
                        self.state = 160
                        self.match(langParser.T__22)
                        pass

                    elif la_ == 11:
                        localctx = langParser.ExprContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expr
                        )
                        self.state = 161
                        if not self.precpred(self._ctx, 17):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 17)"
                            )
                        self.state = 162
                        self.match(langParser.T__23)
                        pass

                    elif la_ == 12:
                        localctx = langParser.ExprContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expr
                        )
                        self.state = 163
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 14)"
                            )
                        self.state = 164
                        self.match(langParser.T__27)
                        pass

                    elif la_ == 13:
                        localctx = langParser.ExprContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expr
                        )
                        self.state = 165
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 13)"
                            )
                        self.state = 166
                        self.match(langParser.T__28)
                        pass

                    elif la_ == 14:
                        localctx = langParser.ExprContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expr
                        )
                        self.state = 167
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 12)"
                            )
                        self.state = 168
                        self.match(langParser.T__29)
                        pass

                    elif la_ == 15:
                        localctx = langParser.ExprContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expr
                        )
                        self.state = 169
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 8)"
                            )
                        self.state = 170
                        self.match(langParser.T__34)
                        self.state = 171
                        self.lambda_()
                        pass

                    elif la_ == 16:
                        localctx = langParser.ExprContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expr
                        )
                        self.state = 172
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 3)"
                            )
                        self.state = 173
                        self.match(langParser.T__39)
                        pass

                self.state = 178
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 7, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    def sempred(self, localctx: RuleContext, ruleIndex: int, predIndex: int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[7] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx: ExprContext, predIndex: int):
        if predIndex == 0:
            return self.precpred(self._ctx, 25)

        if predIndex == 1:
            return self.precpred(self._ctx, 23)

        if predIndex == 2:
            return self.precpred(self._ctx, 21)

        if predIndex == 3:
            return self.precpred(self._ctx, 19)

        if predIndex == 4:
            return self.precpred(self._ctx, 6)

        if predIndex == 5:
            return self.precpred(self._ctx, 5)

        if predIndex == 6:
            return self.precpred(self._ctx, 4)

        if predIndex == 7:
            return self.precpred(self._ctx, 2)

        if predIndex == 8:
            return self.precpred(self._ctx, 1)

        if predIndex == 9:
            return self.precpred(self._ctx, 18)

        if predIndex == 10:
            return self.precpred(self._ctx, 17)

        if predIndex == 11:
            return self.precpred(self._ctx, 14)

        if predIndex == 12:
            return self.precpred(self._ctx, 13)

        if predIndex == 13:
            return self.precpred(self._ctx, 12)

        if predIndex == 14:
            return self.precpred(self._ctx, 8)

        if predIndex == 15:
            return self.precpred(self._ctx, 3)
